--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0;
+    width: 60%;
+    margin: 0 auto;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+.container li {
+    list-style: decimal;
+    margin: 10px 0;
+    font-size: 20px;
+}
